load-balancer.tf
resource "aws_lb" "nlb" {
  name               = "nlb"
  internal           = false 
  load_balancer_type = "network"
  subnets            = [aws_subnet.terra-demo-public-subnet.id]  

  enable_deletion_protection = false
}
resource "aws_lb_target_group" "nlb_target" {
  name     = "nlb-tg"
  port     = 80
  protocol = "TCP"
  vpc_id   = aws_vpc.terra-demo.id

  target_type = "instance"
}
resource "aws_lb_listener" "nlb_listener" {
  load_balancer_arn = aws_lb.nlb.arn
  port              = 80
  protocol          = "TCP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nlb_target.arn
  }
}
